--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_ecosed:
-    path: ../flutter_ecosed
+  flutter_ecosed: ^0.1.1
   flutter_boost:
     git:
         url: 'https://github.com/alibaba/flutter_boost.git'
